Changelog
----------

0.3 (unreleased)
^^^^^^^^^^^^^^^^

- Nothing changed yet.


0.2 (2013-03-13)
^^^^^^^^^^^^^^^^

- Allow more than one old_path [ericof]


0.1 (2012-12-01)
^^^^^^^^^^^^^^^^^^^^^

- Created package with the `redirector` blueprint.
  [Leonardo Rochael Almeida]