@@ -4,7 +4,9 @@ Changelog
 0.3 (unreleased)
 ^^^^^^^^^^^^^^^^
 
-- Nothing changed yet.
+- Added several blueprints
+- Created mini-framework for easy creating and registering minimalisc blueprints
+[jsbueno]
 
 
 0.2 (2013-03-13)
